spacing and theme of the events and about section

--- a/Lab-5/Lab-5.html
+++ b/Lab-5/Lab-5.html
@@ -250,7 +250,7 @@
                                     diverse range of disciplines. Our campus fosters an environment that encourages innovation, research, and personal growth, helping 
                                     students prepare for a successful future. Join us to experience the unique blend of academic excellence and a supportive community.
                                 </p>
-                                <a href="#" class="btn btn-warning">Learn More</a>
+                                <a href="#" class="btn btn-dark">Learn More</a>
                             </div>
 
                         </div>
@@ -280,19 +280,22 @@
 
                     <div class="row">
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
-                                    <i class="bi bi-controller"></i>
-                                    <p class="h3">Esports</p>
-                                    <p class="lead">
-                                        Compete in our Esports Tournament featuring games like PUBG Mobile, FC 24, TEKKEN 8, and more. Test your gaming skills against 
-                                        other players and claim the title of champion!
-                                    </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <div>
+                                        <i class="bi bi-controller"></i>
+                                        <p class="h3">Esports</p>
+                                        <p class="lead">
+                                            Compete in our Esports Tournament featuring games like PUBG Mobile, FC 24, TEKKEN 8, and more. Test your gaming skills against 
+                                            other players and claim the title of champion!
+                                        </p>
+                                    </div>
+                                    
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
 
                                 </div>
 
@@ -300,11 +303,11 @@
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="fa-solid fa-paw"></i>
                                     <p class="h3">Pet Show</p>
@@ -312,7 +315,8 @@
                                         Bring your furry friends and showcase their unique talents at the Pet Show. Compete for fun prizes in categories like cutest pet
                                         and best-dressed!
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
 
                                 </div>
 
@@ -320,112 +324,124 @@
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-people-fill"></i>
                                     <p class="h3">Among Us</p>
                                     <p class="lead">
                                         Experience the excitement of the popular game "Among Us" in real life. Complete tasks, spot impostors, and see if you can outsmart your friends!
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-border-all"></i>
                                     <p class="h3">Board LUDO</p>
                                     <p class="lead">
                                         Roll the dice and test your luck in a friendly game of LUDO! Gather your friends and enjoy the competition in this classic board game.
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-clock"></i>
                                     <p class="h3">Minute to Win It</p>
                                     <p class="lead">
                                         Compete in a series of quick, exciting challenges that must be completed within 60 seconds. Test your speed, skill, and agility to win!
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
 
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-eye-slash-fill"></i>
                                     <p class="h3">Blindfold Hunt</p>
                                     <p class="lead">
                                         Embark on a thrilling Blindfold Hunt! Work with your team to find hidden treasures while relying solely on communication and trust.
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-lg-2"></div>
 
-                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                                <div class="card-body">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
+
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-airplane"></i>
                                     <p class="h3">Paper Plane Contest</p>
                                     <p class="lead">
                                         Craft the best paper plane and compete to see whose plane flies the farthest. It’s time to show your creativity and aeronautical skills!
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 mb-4">
 
-                            <div class="card text-white text-center bg-dark pb-2 mt-4">
-                                <div class="card-body">
+                            <div class="card text-white text-center bg-primary pb-2 mb-4 h-100">
+
+                                <div class="card-body d-flex flex-column justify-content-between">
 
                                     <i class="bi bi-music-note-list"></i>
                                     <p class="h3">Musical Chair</p>
                                     <p class="lead">
                                         Join in the classic game of Musical Chair! Move with the music, but when it stops, grab a seat as fast as you can. Last one sitting wins!
                                     </p>
-                                    <button class="btn btn-warning text-dark">Read More</button>
+                                    
+                                    <button class="btn btn-light text-dark mx-auto">Read More</button>
+
                                 </div>
 
                             </div>
 
                         </div>
+
+                        <div class="col-lg-2"></div>
 
                     </div>
 
