--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     </head>
+
     <body class="bg-dark">
 
         <p class="h1 text-center text-white mb-4">Web Technologies</p>
@@ -209,18 +210,19 @@
 
                         <div class="card-body card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 5 - Sports Week Website with Bootstrap</p>
+                            <p class="h5 card-title">Lab Task 5 - Sports Week Website with Bootstrap 5</p>
 
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam rutrum nibh eget sem eleifend, id venenatis ante egestas. Mauris tempor congue augue. Aliquam erat volutpat
+                                This page introduces the exciting activities planned for the COMSATS Islamabad Wah Campus Sports Week, along with information about the campus and a contact section. Key features include:
                                 <ul>
-                                    <li><strong>Lorem ipsum dolor sit amet</strong> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque</li>
-                                    <li><strong>Donec facilisis diam</strong> Quisque lobortis porttitor sem, quis aliquam arcu porttitor non. Ut mollis libero eu ligula dictum, a consectetur massa porttitor</li>
-                                    <li><strong>Maecenas tristique</strong> Etiam eleifend, ligula id mollis fringilla, magna ex porta nisi, vel bibendum turpis turpis vel augue. Proin at erat semper, dapibus nibh ut</li>
-                                    <li><strong>Cras tempus</strong> vehicula a dolor ut viverra. Vestibulum vestibulum fringilla efficitur. Cras orci ipsum, tristique eu ultrices eget, bibendum eu lacus. Cras</li>
+                                    <li><strong>Sports Events:</strong> Engaging card layout showcasing the different sports events like "Blindfold Hunt," "Paper Plane Contest," and "Musical Chair." Each event card has a description and a "Register Now" button, making it easy for participants to sign up.</li>
+                                    <li><strong>About Section:</strong> A detailed section providing information about COMSATS Islamabad Wah Campus. It includes an image and a description highlighting the campus's dedication to academic excellence, innovation, and student growth.</li>
+                                    <li><strong>Contact Section:</strong> A contact form designed to facilitate communication regarding the Sports Week events. Users can provide their name, email, and message, ensuring their inquiries are addressed. The form uses external CSS for styling and maintains a responsive design for ease of use on different devices.</li>
+                                    <li><strong>Footer:</strong> A simple footer with a reserved rights statement and a link to the official social media page of the campus.</li>
                                 </ul>
-                                Etiam eleifend, ligula id mollis fringilla, magna ex porta nisi, vel bibendum turpis turpis vel augue. Proin at erat semper, dapibus nibh ut,
+                                Bootstrap 5 is used throughout the page for a consistent and responsive design, ensuring a pleasant user experience across various devices.
                             </p>
+
                             <a href="Lab-5/Lab-5.html" class="btn btn-success mt-auto ms-auto">View Task 5 -></a>
 
                         </div>
