--- a/Lab-5/Lab-5.html
+++ b/Lab-5/Lab-5.html
@@ -520,7 +520,7 @@
 
             <div class="container">
 
-                <p class="text-white">All Rights Reserved @linktr.ee/comecs</p>
+                <p class="text-white">All Rights Reserved COMSATS</p>
 
             </div>
 
