functional calculator added

--- a/index.html
+++ b/index.html
@@ -231,6 +231,34 @@
 
                 </div>
 
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <img src="Snapshots/task-6 (functional calculator).png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 6 - Functional Calculator">
+
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 6 - Functional Calculator with JavaScript</p>
+
+                            <p class="card-text">
+                                This functional calculator is designed using HTML, External CSS, Bootstrap 5, and JavaScript, demonstrating key programming concepts. Key features include:
+                                <ul>
+                                    <li><strong>User Input:</strong> The calculator allows users to input numbers and operations using an intuitive interface, facilitating easy calculations.</li>
+                                    <li><strong>Operations Supported:</strong> It supports basic arithmetic operations (addition, subtraction, multiplication, and division) as well as special functions like square, square root, and reciprocal.</li>
+                                    <li><strong>Dynamic Display:</strong> The display updates in real-time, showing the current input and the ongoing calculation in a clear format, enhancing user interaction.</li>
+                                    <li><strong>Responsive Design:</strong> Built with Bootstrap 5, the calculator is fully responsive, ensuring optimal performance on various devices.</li>
+                                </ul>
+                                This project showcases an understanding of JavaScript functions, event handling, and dynamic DOM manipulation, providing a practical tool for everyday calculations.
+                            </p>
+
+                            <a href="Lab-6 (functional calculator)/Lab-6 (functional calculator).html" class="btn btn-success mt-auto ms-auto">View Task 6 (Functional Calculator) -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
             
