--- a/Lab-6 (functional calculator)/Lab-6 (functional calculator).html
+++ b/Lab-6 (functional calculator)/Lab-6 (functional calculator).html
@@ -39,23 +39,15 @@
             <main class="d-flex flex-column px-2">
 
                 <section class="constant">
+                    <p id="preview" class="text-end text-white display-6 fw-normal"></p>
                     <p id="display" class="text-end text-white display-1 fw-bold">0</p>
-                </section>
-
-                <section class="m-btn-group d-flex justify-content-between">
-                    <button class="m-btn-grey m-btn border-0 rounded">MC</button>
-                    <button class="m-btn-grey m-btn border-0 rounded">MR</button>
-                    <button class="m-btn-white m-btn border-0 text-white rounded">M+</button>
-                    <button class="m-btn-white m-btn border-0 text-white rounded">M-</button>
-                    <button class="m-btn-white m-btn border-0 text-white rounded">MS</button>
-                    <button class="m-btn-grey m-btn border-0 rounded">M&darr;</button>
                 </section>
 
                 <section class="second-btn-group d-flex justify-content-between">
                     <button class="color-2 border-0 text-white rounded" onclick="clearEntry()">CE</button>
                     <button class="color-2 border-0 text-white rounded" onclick="clearAll()">C</button>
                     <button class="color-2 border-0 text-white rounded">%</button>
-                    <button class="color-2 border-0 text-white rounded">Icon</button>
+                    <button class="color-2 border-0 text-white rounded">&#9003;</button>
                 </section>
 
                 <section class="third-btn-group d-flex justify-content-between">
