--- a/Lab-6 (form validation)/Lab-6 (form validation).html
+++ b/Lab-6 (form validation)/Lab-6 (form validation).html
@@ -33,25 +33,23 @@
 
                <form id="validation" class="m-auto row p-0 needs-validation" novalidate>
 
-                    <img src="img.webp" alt="Sample photo" class="img-fluid col-xl-6 d-none d-xl-block p-0" />
+                    <img src="img.webp" alt="Sample photo" class="img-fluid col-xl-6 d-none d-xl-block p-0" style="max-height: 90vh;"/>
 
                     <div class="right-panel col-xl-6 col-12 p-5">
 
                         <p class="display-6 text-uppercase text-white fw-bold">Student Registration Form</p>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
-                            <div class="col-6">
+                            <div class="col-6 ps-0">
 
-                                <label for="firstName" class="form-label text-white fw-bold">First Name</label>
                                 <input type="text" placeholder="First Name" class="form-control text-white border" id="firstName" style="background-color: #424242;" required>
                                 <div class="invalid-feedback">First name must contain only letters and be at least 2 characters long.</div>
 
                             </div>
 
-                            <div class="col-6">
+                            <div class="col-6 pe-0">
 
-                                <label for="lastName" class="form-label text-white fw-bold">Last Name</label>
                                 <input type="text" placeholder="Last Name" class="form-control text-white border" id="lastName" style="background-color: #424242;" required>
                                 <div class="invalid-feedback">Last name must contain only letters and be at least 2 characters long.</div>
 
@@ -59,15 +57,14 @@
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
-                            <label for="address" class="form-label text-white fw-bold">Address</label>
                             <input type="text" placeholder="Address" class="form-control text-white border" id="address" style="background-color: #424242;" required>
                             <div class="invalid-feedback">Please provide your address</div>
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
                             <label class="form-label text-white fw-bold">Gender:</label>
 
@@ -94,9 +91,7 @@
                             
                         </div>
 
-                        <div class="row my-5">
-
-                            <label for="stateSelect" class="form-label text-white fw-bold">State</label>
+                        <div class="row my-4">
 
                             <select id="stateSelect" class="form-select text-white border" style="background-color: #424242;" required>
 
@@ -113,9 +108,7 @@
 
                         </div>
 
-                        <div class="row my-5">
-
-                            <label for="citySelect" class="form-label text-white fw-bold">City</label>
+                        <div class="row my-4">
 
                             <select id="citySelect" class="form-select text-white border" style="background-color: #424242;" required>
 
@@ -127,37 +120,34 @@
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
-                            <label for="pincode" class="form-label text-white fw-bold">Pincode</label>
                             <input type="password" class="form-control text-white border" id="pincode" placeholder="Pincode" style="background-color: #424242;" required>
                             <div class="invalid-feedback">Please set the pincode</div>
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
-                            <label for="course" class="form-label text-white fw-bold">Course</label>
                             <input type="text" class="form-control text-white border" id="course" placeholder="Course" style="background-color: #424242;" required>
                             <div class="invalid-feedback">Please describe the course</div>
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
-                            <label for="email" class="form-label text-white fw-bold">Email ID</label>
                             <input type="email" class="form-control text-white border placeholder-white" id="email" placeholder="Email ID" style="background-color: #424242;" required>
                             <div class="invalid-feedback">Please provide the valid email</div>
 
                         </div>
 
-                        <div class="row my-5">
+                        <div class="row my-4">
 
                             <div class="col-4"></div>
 
                             <div class="col-8 d-flex justify-content-end">
-                                <button type="reset" class="btn btn-light me-2">Reset All</button>
-                                <button type="submit" class="btn btn-warning text-white">Submit Form</button>
+                                <button type="reset" class="btn btn-light me-2 mt-5">Reset All</button>
+                                <button type="submit" class="btn btn-warning text-white mt-5">Submit Form</button>
 
                             </div>
 
