--- a/index.html
+++ b/index.html
@@ -271,14 +271,15 @@
                             <p class="h5 card-title">Lab Task 6 - Form Validation with JavaScript</p>
 
                             <p class="card-text">
-                                This functional calculator is designed using HTML, External CSS, Bootstrap 5, and JavaScript, demonstrating key programming concepts. Key features include:
+                                This student registration form utilizes HTML, Bootstrap 5, and JavaScript to validate user input and ensure the form submission is correct. Key features include:
                                 <ul>
-                                    <li><strong>User Input:</strong> The calculator allows users to input numbers and operations using an intuitive interface, facilitating easy calculations.</li>
-                                    <li><strong>Operations Supported:</strong> It supports basic arithmetic operations (addition, subtraction, multiplication, and division) as well as special functions like square, square root, and reciprocal.</li>
-                                    <li><strong>Dynamic Display:</strong> The display updates in real-time, showing the current input and the ongoing calculation in a clear format, enhancing user interaction.</li>
-                                    <li><strong>Responsive Design:</strong> Built with Bootstrap 5, the calculator is fully responsive, ensuring optimal performance on various devices.</li>
+                                    <li><strong>Real-Time Validation:</strong> The form performs validation checks as the user types, ensuring inputs like first/last name, pincode, and email meet specified criteria.</li>
+                                    <li><strong>Dynamic Dropdown:</strong> The city dropdown is dynamically populated based on the selected state using JavaScript event handling.</li>
+                                    <li><strong>Regex-Based Validation:</strong> JavaScript uses regular expressions to validate the input for names, pincode, and email, enhancing the form's robustness.</li>
+                                    <li><strong>Invalid Feedback:</strong> Each input field provides real-time feedback when validation fails, guiding users to correct their inputs.</li>
+                                    <li><strong>Form Reset and Submit:</strong> Users can reset the form or submit it, with feedback indicating if the form passes all validations before submission.</li>
                                 </ul>
-                                This project showcases an understanding of JavaScript functions, event handling, and dynamic DOM manipulation, providing a practical tool for everyday calculations.
+                                This project demonstrates an understanding of DOM manipulation, event listeners, and regular expression-based validation, ensuring user-friendly form handling.
                             </p>
 
                             <a href="Lab-6 (form validation)/Lab-6 (form validation).html" class="btn btn-success mt-auto ms-auto">View Task 6 (Form Validation) -></a>
