--- a/Lab-6 (currency converter)/Lab-6 (currency converter).html
+++ b/Lab-6 (currency converter)/Lab-6 (currency converter).html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Calculator</title>
+        <title>Currency Converter</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -16,78 +16,104 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="icon" href="favicon.ico">
 
     </head>
 
     <body>
         
-        <div>
+        <div class="container-fluid">
 
-            <header class="d-flex justify-content-between flex-nowrap px-2 py-3">
+            <div class="row">
 
-                <div class="header-left d-flex justify-content-between">
+                <p class="display-5 fw-bold text-center text-white">Currency Converter</p>
 
-                    <a class="fas fa-bars text-white text-decoration-none" href="#"></a>
-                    <p class="h1 text-white fw-bold">Standard</p>
-                    <i class="fas fa-th-large text-white"></i> 
+            </div>
+
+        </div>
+
+
+        <form id="currency-form" class="d-flex flex-column justify-content-around">
+
+            <div class="row">
+
+                <div class="col-3"></div>
+                <div class="col-6 d-flex justify-content-evenly">
+
+                    <label for="amount" class="form-label text-white fw-bold me-4 h3">Convert: </label>
+                    <input type="number" class="form-control w-100" id="amount" placeholder="Enter amount" required>
 
                 </div>
 
-                <a class="fas fa-history text-white text-decoration-none" href="#"></a>
-            </header>
+            </div>
 
-            <main class="d-flex flex-column px-2">
+            <div class="row">
 
-                <section class="constant">
-                    <p id="preview" class="text-end text-white display-6 fw-normal"></p>
-                    <p id="display" class="text-end text-white display-1 fw-bold">0</p>
-                </section>
+                <div class="col-3"></div>
+                <div class="col-6 d-flex">
 
-                <section class="second-btn-group d-flex justify-content-between">
-                    <button class="color-2 border-0 text-white rounded" onclick="clearEntry()">CE</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="clearAll()">C</button>
-                    <button class="color-2 border-0 text-white rounded">%</button>
-                    <button class="color-2 border-0 text-white rounded">&#9003;</button>
-                </section>
+                    <select class="form-select" id="fromCurrency">
 
-                <section class="third-btn-group d-flex justify-content-between">
-                    <button class="color-2 border-0 text-white rounded" onclick="operate('1/x')">1/x</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="operate('square')">x<sup class="text-white color-2">2</sup></button>
-                    <button class="color-2 border-0 text-white rounded" onclick="operate('sqrt')"> <sup class="text-white color-2">2</sup>&radic;x</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="addOperator('÷')">÷</button>
-                </section>
+                        <option value="USD">USD</option>
+                        <option value="EUR">EUR</option>
+                        <option value="GBP">GBP</option>
+                        <option value="PKR">PKR</option>
+                        <option value="JPY">JPY</option>
 
-                <section class="fourth-btn-group d-flex justify-content-between">
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(7)">7</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(8)">8</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(9)">9</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="addOperator('X')">X</button>
-                </section>
+                    </select>
 
-                <section class="fifth-btn-group d-flex justify-content-between">
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(4)">4</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(5)">5</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(6)">6</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="addOperator('-')">-</button>
-                </section>
+                    <button class="btn btn-light rounded-circle" id="switchCurrenciesBtn">
+                        <i class="fas fa-exchange-alt"></i>
+                    </button>
 
-                <section class="sixth-btn-group d-flex justify-content-between">
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(1)">1</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(2)">2</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(3)">3</button>
-                    <button class="color-2 border-0 text-white rounded" onclick="addOperator('+')">+</button>
-                </section>
+                    <select class="form-select" id="toCurrency">
 
-                <section class="seventh-btn-group d-flex justify-content-between">
-                    <button class="color-1 border-0 text-white rounded" onclick="toggleSign()">+/-</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendNumber(0)">0</button>
-                    <button class="color-1 border-0 text-white rounded" onclick="appendDecimal()">.</button>
-                    <button class="color-3 border-0 rounded" onclick="calculate()">=</button>
+                        <option value="USD">USD</option>
+                        <option value="EUR">EUR</option>
+                        <option value="GBP">GBP</option>
+                        <option value="PKR">PKR</option>
+                        <option value="JPY">JPY</option>
 
-                </section>
-            </main>
+                    </select>
 
-        </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-3"></div>
+                <div class="col-6 d-flex justify-content-evenly">
+
+                    <label for="exchangeRateInput" class="form-label text-white h4">Exchange Rate: </label>
+                    <input class="form-control w-50" id="exchangeRateInput" placeholder="Exchange Rate">
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-3"></div>
+                <div class="col-6 d-flex justify-content-evenly">
+
+                    <button type="button" class="btn btn-light w-100" id="convertBtn">Convert</button>
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-3"></div>
+                <div class="col-6 d-flex justify-content-evenly">
+
+                    <p class="h4 text-white" id="result">Exchanged Amount: </p>
+                </div>
+
+            </div>
+
+        </form>
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
