--- a/Lab-6 (currency converter)/Lab-6 (currency converter).html
+++ b/Lab-6 (currency converter)/Lab-6 (currency converter).html
@@ -18,6 +18,20 @@
         />
         <link rel="icon" href="favicon.ico">
 
+        <style>
+
+            .select-div {
+                width: 30%;
+            }
+
+            @media (max-width: 768px) {
+                .select-div {
+                     width: 100%;
+                }
+            }
+
+        </style>
+
     </head>
 
     <body>
@@ -26,94 +40,84 @@
 
             <div class="row">
 
-                <p class="display-5 fw-bold text-center text-white">Currency Converter</p>
+                <p class="display-5 fw-bold text-center text-white mt-5">Currency Converter</p>
 
             </div>
+
+            <form id="currency-form" class="d-flex flex-column">
+
+                <div class="row my-5">
+
+                    <div class="col-md-3"></div>
+                    <div class="col-12 col-md-6 d-flex justify-content-center">
+
+                        <input type="number" class="form-control" id="amount" placeholder="Enter amount" style="width: 38%;" required>
+
+                    </div>
+                    <div class="col-md-3"></div>
+
+                </div>
+
+                <div class="row my-5">
+
+                    <div class="col-md-4"></div>
+                    <div class="col-12 col-md-6 d-flex select-div flex-md-row flex-column justify-content-center align-items-center">
+
+                        <select class="form-select me-0 me-md-2" id="fromCurrency">
+
+                            <option value="USD">USD</option>
+                            <option value="EUR">EUR</option>
+                            <option value="GBP">GBP</option>
+                            <option value="PKR">PKR</option>
+                            <option value="JPY">JPY</option>
+
+                        </select>
+
+                        <button class="btn btn-light rounded-circle me-md-2 me-0" id="switchCurrenciesBtn">
+                            <i class="fas fa-exchange-alt "></i>
+                        </button>
+
+                        <select class="form-select" id="toCurrency">
+
+                            <option value="USD">USD</option>
+                            <option value="EUR">EUR</option>
+                            <option value="GBP">GBP</option>
+                            <option value="PKR">PKR</option>
+                            <option value="JPY">JPY</option>
+
+                        </select>
+
+                    </div>
+                    <div class="col-md-3"></div>
+
+                </div>
+
+                <div class="row my-5">
+
+                    <p for="exchangeRateInput" class="form-label text-white text-center fw-bold h3 me-2" id="exchangeRateInput">Exchange Rate: </p>
+
+                </div>
+
+                <div class="row my-5">
+
+                    <div class="col-3"></div>
+                    <div class="col-6 d-flex justify-content-center">
+
+                        <button type="button" class="btn btn-light" id="convertBtn">Convert</button>
+
+                    </div>
+
+                </div>
+
+                <div class="row my-5">
+
+                    <p class="h3 fw-bold text-center text-white" id="result">Exchanged Amount: </p>
+
+                </div>
+
+            </form>
 
         </div>
-
-
-        <form id="currency-form" class="d-flex flex-column justify-content-around">
-
-            <div class="row">
-
-                <div class="col-3"></div>
-                <div class="col-6 d-flex justify-content-evenly">
-
-                    <label for="amount" class="form-label text-white fw-bold me-4 h3">Convert: </label>
-                    <input type="number" class="form-control w-100" id="amount" placeholder="Enter amount" required>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-3"></div>
-                <div class="col-6 d-flex">
-
-                    <select class="form-select" id="fromCurrency">
-
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
-                        <option value="GBP">GBP</option>
-                        <option value="PKR">PKR</option>
-                        <option value="JPY">JPY</option>
-
-                    </select>
-
-                    <button class="btn btn-light rounded-circle" id="switchCurrenciesBtn">
-                        <i class="fas fa-exchange-alt"></i>
-                    </button>
-
-                    <select class="form-select" id="toCurrency">
-
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
-                        <option value="GBP">GBP</option>
-                        <option value="PKR">PKR</option>
-                        <option value="JPY">JPY</option>
-
-                    </select>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-3"></div>
-                <div class="col-6 d-flex justify-content-evenly">
-
-                    <label for="exchangeRateInput" class="form-label text-white h4">Exchange Rate: </label>
-                    <input class="form-control w-50" id="exchangeRateInput" placeholder="Exchange Rate">
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-3"></div>
-                <div class="col-6 d-flex justify-content-evenly">
-
-                    <button type="button" class="btn btn-light w-100" id="convertBtn">Convert</button>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-3"></div>
-                <div class="col-6 d-flex justify-content-evenly">
-
-                    <p class="h4 text-white" id="result">Exchanged Amount: </p>
-                </div>
-
-            </div>
-
-        </form>
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
