--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                         <div class="card-body card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 6 - Functional Calculator with JavaScript</p>
+                            <p class="h5 card-title">Lab Task 6 - Functional Calculator</p>
 
                             <p class="card-text">
                                 This functional calculator is designed using HTML, External CSS, Bootstrap 5, and JavaScript, demonstrating key programming concepts. Key features include:
@@ -269,7 +269,7 @@
 
                         <div class="card-body card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 6 - Form Validation with JavaScript</p>
+                            <p class="h5 card-title">Lab Task 6 - Form Validation</p>
 
                             <p class="card-text">
                                 This student registration form utilizes HTML, Bootstrap 5, and JavaScript to validate user input and ensure the form submission is correct. Key features include:
@@ -291,34 +291,35 @@
 
                 </div>
 
-                <div class="col">
+               <div class="col">
 
-                    <div class="card mb-3 shadow-sm h-100">
+                <div class="card mb-3 shadow-sm h-100">
 
-                        <img src="Snapshots/task-6 (currency converter).png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 6 - Currency Converter">
+                    <img src="Snapshots\task-6 (currency converter).png" class="card-img-top img-fluid" alt="Snapshot of Currency Converter Project">
 
-                        <div class="card-body card-body d-flex flex-column">
+                    <div class="card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 6 -Currency Converter with JavaScript</p>
+                        <p class="h5 card-title">Lab Task 6 - Currency Converter</p>
 
-                            <p class="card-text">
-                                This functional calculator is designed using HTML, External CSS, Bootstrap 5, and JavaScript, demonstrating key programming concepts. Key features include:
-                                <ul>
-                                    <li><strong>User Input:</strong> The calculator allows users to input numbers and operations using an intuitive interface, facilitating easy calculations.</li>
-                                    <li><strong>Operations Supported:</strong> It supports basic arithmetic operations (addition, subtraction, multiplication, and division) as well as special functions like square, square root, and reciprocal.</li>
-                                    <li><strong>Dynamic Display:</strong> The display updates in real-time, showing the current input and the ongoing calculation in a clear format, enhancing user interaction.</li>
-                                    <li><strong>Responsive Design:</strong> Built with Bootstrap 5, the calculator is fully responsive, ensuring optimal performance on various devices.</li>
-                                </ul>
-                                This project showcases an understanding of JavaScript functions, event handling, and dynamic DOM manipulation, providing a practical tool for everyday calculations.
-                            </p>
+                        <p class="card-text">
+                            The Currency Converter project allows users to convert between various currencies, including USD, EUR, GBP, PKR, and JPY. Key JavaScript functionalities include:
+                            <ul>
+                                <li><strong>Exchange Rate Calculation:</strong> Based on predefined exchange rates, the script dynamically updates the exchange rate when the user selects different currencies using dropdowns. This ensures the most accurate rate is displayed.</li>
+                                <li><strong>Currency Conversion:</strong> The core function `convertCurrency` takes the input amount and performs the conversion based on the selected currencies, displaying the result with precision.</li>
+                                <li><strong>Switching Currencies:</strong> Users can quickly swap the "From" and "To" currencies using a button, with the rates updating automatically to reflect the new selection.</li>
+                                <li><strong>Real-time Error Handling:</strong> Ensures the entered amount is valid and displays appropriate alerts for incorrect or empty inputs.</li>
+                            </ul>
+                            The interactivity, facilitated by event listeners, makes the converter intuitive and efficient, with all logic handled through external JavaScript (`script.js`).
+                        </p>
 
-                            <a href="Lab-6 (currency converter)/Lab-6 (currency converter).html" class="btn btn-success mt-auto ms-auto">View Task 6 (Currency Converter) -></a>
-
-                        </div>
-
+                        <a href="Lab-6/Lab-6.html" class="btn btn-success mt-auto ms-auto">View Task 6 -></a>
+                        
                     </div>
 
                 </div>
+
+            </div>
+
 
             </div>
             
