domain error resolved

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             The interactivity, facilitated by event listeners, makes the converter intuitive and efficient, with all logic handled through external JavaScript (`script.js`).
                         </p>
 
-                        <a href="Lab-6/Lab-6.html" class="btn btn-success mt-auto ms-auto">View Task 6 -></a>
+                        <a href="Lab-6 (currency converter)\Lab-6 (currency converter).html" class="btn btn-success mt-auto ms-auto">View Task 6 -></a>
                         
                     </div>
 
