--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                 <div class="card mb-3 shadow-sm h-100">
 
-                    <img src="Snapshots\task-6 (currency converter).png" class="card-img-top img-fluid" alt="Snapshot of Currency Converter Project">
+                    <img src="Snapshots/task-6 (currency converter).png" class="card-img-top img-fluid" alt="Snapshot of Currency Converter Project">
 
                     <div class="card-body d-flex flex-column">
 
@@ -312,7 +312,7 @@
                             The interactivity, facilitated by event listeners, makes the converter intuitive and efficient, with all logic handled through external JavaScript (`script.js`).
                         </p>
 
-                        <a href="Lab-6 (currency converter)\Lab-6 (currency converter).html" class="btn btn-success mt-auto ms-auto">View Task 6 -></a>
+                        <a href="Lab-6 (currency converter)/Lab-6 (currency converter).html" class="btn btn-success mt-auto ms-auto">View Task 6 -></a>
                         
                     </div>
 
