--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                             </p>
 
-                            <a href="Lab-2/html/Lab-2.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
+                            <a href="Lab-2\html\Lab-2.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
 
                         </div>
 
