CRUD Local update

--- a/Lab-7 (CRUD-local)/Lab-7 (CRUD-local).html
+++ b/Lab-7 (CRUD-local)/Lab-7 (CRUD-local).html
@@ -41,6 +41,20 @@
 
                     </div>
 
+                    <div class="mb-3">
+
+                        <label for="phone" class="form-label text-white h5 fw-bold">Phone Number</label>
+                        <input type="tel" id="phone" class="form-control" required>
+
+                    </div>
+                    
+                    <div class="mb-3">
+
+                        <label for="address" class="form-label text-white h5 fw-bold">Address</label>
+                        <input type="text" id="address" class="form-control" required>
+
+                    </div>
+
                     <input type="hidden" id="index">
 
                     <button type="submit" class="btn btn-light">Add</button>
